--- a/Entrega-Clase/src/views/login.handlebars
+++ b/Entrega-Clase/src/views/login.handlebars
@@ -1,1 +1,9 @@
 <h1>Login</h1>
+
+<div>
+    <form action="/api/session/login" method="post">
+        <input type="email" name="email" placeholder="email">
+        <input type="password" name="password" placeholder="Password">
+        <button type="submit">Login</button>
+    </form>
+</div>
