--- a/Entrega-Clase/src/views/register.handlebars
+++ b/Entrega-Clase/src/views/register.handlebars
@@ -1,7 +1,10 @@
 <h1>Register</h1>
 
 <div>
-    <form action="/singup" method="post">
+    <form action="/api/session/singup" method="post">
+        <input type="text" placeholder="First Name" name="first-name">
+        <input type="text" placeholder="Last Name" name="last-name">
+        <input type="number" name="age">
         <input type="email" name="email" placeholder="email">
         <input type="password" name="password" placeholder="Password">
         <button type="submit">Register</button>
